<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:id="@+id/tl_textView"
        android:background="@color/foo"
        android:text="@string/tl_button"
        android:textSize="16pt"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:id="@+id/tr_textView"
        android:background="@color/bar"
        android:text="@string/tr_button"
        android:textSize="16pt"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:id="@+id/bl_textView"
        android:background="@color/baz"
        android:text="@string/bl_button"
        android:textSize="16pt"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:id="@+id/br_textView"
        android:background="@color/qux"
        android:text="@string/br_button"
        android:textSize="16pt"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:id="@+id/res_textView"
        android:background="@color/key"
        android:text="@string/reset"
        android:textColor="@color/whi"
        android:textSize="16pt"
        android:gravity="center"
        android:layout_centerInParent="true" />



</RelativeLayout>
